fixed ch4 layout issue

--- a/chapter.css
+++ b/chapter.css
@@ -36,11 +36,12 @@ body.table {
 .mainText {
   text-align: center;
   width: 80%;
+  max-width: 1200px;
   padding: 3em 6em 6em 6em;
   background: rgba(245, 245, 245, 0.95); /* Fondo blanco con opacidad */
   box-shadow: 5px 4px 5px 5px rgba(0, 0, 0, 0.2); /* Añade una sombra */
   border-radius: 12px; /* Bordes redondeados */
-  margin: 3% 10% 3% 10%;
+  margin: 3em auto;
 }
 
 .container {
